# sap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  prj.conf
boards/: nrf52840dk_nrf52840.overlay
docs/: architecture.md  todo.md
drivers/sensor/veml7700/: CMakeLists.txt  Kconfig  veml7700.c  veml7700.h  veml7700_async.c  veml7700_decoder.c
drivers/sensor/veml7700/zephyr/: module.yml
dts/bindings/: vendor-prefixes.txt
dts/bindings/sensor/: custom,veml7700.yaml
include/: app_error.h  app_state.h  ble.h  button.h  diode.h  probe.h
src/: ble.c  button.c  diode.c  main.c  probe.c  probe.h
