cmake_minimum_required(VERSION 3.20.0)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(sap)

target_sources(app PRIVATE 
    src/main.c 
    src/ble.c 
    src/probe.c
    src/diode.c 
    src/button.c
)

target_include_directories(app PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)